# TimeCalc

./: LICENSE  README  TimeCalc.hs  timecalc.cabal
